--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -36,7 +36,7 @@
                 android:text="Welcome," />
 
             <TextView
-                android:id="@+id/tvName"
+                android:id="@+id/tvRetrieveName"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
