--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -59,12 +59,11 @@
                 android:id="@+id/textView3"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:gravity="center_vertical"
+                android:gravity="center"
                 android:textColor="@color/white"
-                android:paddingLeft="15dp"
                 android:textStyle="bold"
                 android:textSize="18sp"
-                android:text="Upcoming Appointment" />
+                android:text="Your Upcoming Appointment in this month:" />
 
             <TextView
                 android:id="@+id/tvUpcomingAppointment"
@@ -122,7 +121,7 @@
                     android:textSize="17sp" />
 
                 <TextView
-                    android:id="@+id/textView7"
+                    android:id="@+id/tvDateTime"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:gravity="center"
