--- a/app/src/main/res/layout/activity_upload_user_avatar1.xml
+++ b/app/src/main/res/layout/activity_upload_user_avatar1.xml
@@ -9,36 +9,59 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:background="@drawable/background"
         >
 
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <androidx.cardview.widget.CardView
+            android:layout_width="350sp"
+            android:layout_height="450sp"
             android:layout_gravity="center"
-            android:textSize="50sp"
-            android:text="Upload Avatar" />
+            android:layout_marginTop="150sp"
+            app:cardCornerRadius="10dp"
+            >
 
-        <ImageView
-            android:id="@+id/imgAvatar"
-            android:layout_width="200dp"
-            android:layout_gravity="center"
-            android:layout_height="159dp"
-            android:src="@drawable/baseline_account_circle_24" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-        <Button
-            android:id="@+id/btnChooseAvatar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Choose Avatar" />
+                <TextView
+                    android:id="@+id/textView5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="30sp"
+                    android:text="Upload Avatar"
+                    android:textColor="#F0C27B"
+                    android:textSize="50sp"
+                    android:textStyle="bold" />
 
-        <Button
-            android:id="@+id/btnChangeAvatar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Change Avatar" />
+                <ImageView
+                    android:id="@+id/imgAvatar"
+                    android:layout_width="200dp"
+                    android:layout_height="159dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/baseline_account_circle_24" />
+
+                <Button
+                    android:id="@+id/btnChooseAvatar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="20sp"
+                    android:layout_marginBottom="20sp"
+                    android:background="#F0C27B"
+                    android:text="Choose Avatar" />
+
+                <Button
+                    android:id="@+id/btnChangeAvatar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="Change Avatar" />
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
 
 
     </LinearLayout>
