--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -69,8 +69,7 @@
                 android:id="@+id/tvUpcomingAppointment"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
-                android:gravity="center_vertical"
-                android:layout_gravity="center_vertical"
+                android:gravity="center"
                 android:textSize="23.5sp"
                 android:paddingLeft="10dp"
                 android:textColorHint="@color/deep_blue"
