--- a/app/src/main/res/layout/lv_hisappointment.xml
+++ b/app/src/main/res/layout/lv_hisappointment.xml
@@ -24,10 +24,14 @@
             android:layout_weight="1"
             android:drawableLeft="@drawable/baseline_calendar_month_24"
             android:textSize="20dp"
+            android:layout_marginHorizontal="15dp"
+            android:layout_marginVertical="10dp"
             android:text="TextView" />
 
         <TextView
             android:id="@+id/tvDoctor"
+            android:layout_marginHorizontal="15dp"
+            android:layout_marginVertical="10dp"
             android:layout_width="match_parent"
             android:layout_weight="1"
             android:layout_height="wrap_content"
