--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -100,33 +100,68 @@
             android:textSize="22sp"
             android:textStyle="bold" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_margin="10dp"
+            android:background="@drawable/homepage_layout_1"
+            android:orientation="vertical"
+            android:padding="10dp">
+
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:padding="10dp"
-                android:background="@drawable/homepage_layout_1"
-                android:layout_margin="10dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tvTitle1"
+                    android:layout_width="240dp"
+                    android:layout_height="40dp"
+                    android:gravity="center"
+                    android:text="Datetime"
+                    android:textColor="@color/black"
+                    android:textSize="17sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/tvTitle2"
+                    android:layout_width="130dp"
+                    android:layout_height="40dp"
+                    android:gravity="center"
+                    android:text="Sympton"
+                    android:textColor="@color/black"
+                    android:textSize="17sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/tvRetrieveTime"
-                    android:layout_width="wrap_content"
+                    android:layout_width="240dp"
                     android:layout_height="40dp"
-                    android:gravity="center_vertical"
-                    android:layout_weight="1"
+                    android:gravity="center"
                     android:hint="Datetime..."
                     android:textColorHint="@color/black"
-                    android:textSize="15sp" />
+                    android:textSize="17sp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/tvRetrieveSympton"
-                    android:layout_width="wrap_content"
+                    android:layout_width="130dp"
                     android:layout_height="40dp"
-                    android:gravity="center_vertical"
-                    android:layout_weight="1"
+                    android:gravity="center"
                     android:hint="Sympton..."
                     android:textColorHint="@color/black"
-                    android:textSize="15sp" />
+                    android:textSize="17sp"
+                    android:textStyle="bold" />
             </LinearLayout>
+
+        </LinearLayout>
         </LinearLayout>
 </FrameLayout>
